testsuite/tests/tool-toplevel/pr7060.compilers.reference
Line 11, characters 18-54:
11 | let print_t out = function A -> Format.fprintf out "A";;
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Warning 8 [partial-match]: this pattern-matching is not exhaustive.
Here is an example of a case that is not matched:
B

type t = A | B
type u = C of t
val print_t : Format.formatter -> t -> unit = <fun>
- : t =
<printer print_t raised an exception: File "//toplevel//", line 11, characters 18-23: Pattern matching failed>


Line 3, characters 0-0:
Error: Syntax error

